# ZaroPGx

./: .env.example  .env.local  .env.production  .flake8  .gitattributes  .gitignore  DOCKER_STACK_NOTES.md  Dockerfile  README.md  UPGRADING.md  bootstrap.ps1  bootstrap.sh  compose.yml  docker-compose.yml.example  pyproject.toml  start-docker.ps1  start-docker.sh
.github/workflows/: ci.yml  render-diagrams.yml
app/: main.py
app/api/: db.py  models.py
app/api/routes/: fhir_export_router.py  monitoring.py  pharmcat_router.py  report_router.py  upload_router.py  workflow_router.py
app/api/utils/: file_processor.py  file_utils.py  header_inspector.py  liftover.py  security.py
app/core/: __init__.py  version_manager.py
app/pharmcat/: pharmcat_client.py  pharmcat_parser.py
app/reports/: fhir_client.py  generator.py  pdf_generators.py  pharmcat_tsv_parser.py  pypgx_pipeline_parser.py
app/reports/templates/: interactive_report.html  report_template.html
app/services/: cleanup_service.py  fhir_export_service.py  job_status_service.py  pharmcat_data_service.py  websocket_manager.py  workflow_progress_calculator.py  workflow_service.py
app/templates/: index.html
app/utils/: allele_translate.py  build_allele_mapping.py  outside_calls_override.py  workflow_client.py
app/visualizations/: workflow.mmd  workflow_diagram.py
config/: genes.json
data/fhir-data/: h2.mv.db  h2.trace.db
data/versions/: hapi.json  mtdna.json  optitype.json  pharmcat.json  postgresql.json  pypgx.json
db/: README.md
db/init/: 00_complete_database_schema.sql  99_wait_for_ready.sql
db/init/migrations/: 02_fix_variant_column_lengths.sql  README.md
db/migrations.old/: 01_job_monitoring_simple.sql  02_fix_job_monitoring_schema.sql  03_clean_uuid_schema.sql  03_convert_user_data_to_uuid.sql
docker/gatk-api/: gatk_api.py
docker/genome-downloader/: .dockerignore  downloader_api.py
docker/hlatyping/: hlatyping_wrapper.py
docker/nextflow/: Dockerfile.nextflow  runner.py
docker/pharmcat/: Dockerfile  pharmcat.py
docker/pypgx/: Dockerfile.pypgx  pypgx_wrapper.py  setup_pypgx.sh
docker/zarohla/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  run_test.sh
docs/: advanced-configuration.md  conf.py  requirements.txt  to-do.md
docs/developer/: architecture.md  deployment.md  development-setup.md  testing.md
docs/samples/: README.md  sample_fhir_r4_pgx_bundle.json
docs/user/: installation.md  quick-start.md  troubleshooting.md  usage.md
lexicon/: allele_map_pypgx_to_pharmcat.csv  allele_map_pypgx_to_pharmcat.json  hla_and_mt_calls.txt  outside_calls.tsv
pipelines/pgx/: main.nf
tests/: conftest.py  run_workflow_tests.py  test_api_endpoints.py  test_compose_contract.py  test_tsv_parser.py  test_websocket_integration.py  test_workflow_e2e.py  test_workflow_monitoring.py
