## THIS PyProject.TOML IS FOR DEVELOPMENT ONLY
## PEP 621 project metadata for uv
[project]
name = "zaropgx"
version = "0.2.4"
description = "[DEVELOPMENT] ZaroPGx Pharmacogenomic Analysis Platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
  { name = "Iliya Yaroshevskiy", email = "iyarosh1@binghamton.edu" }
]

dependencies = [
  # Web and ASGI
  "fastapi[standard]>=0.116.0,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  # Auth and security
  "python-jose>=3.5.0,<4.0.0",
  "passlib>=1.7.4,<2.0.0",
  "bcrypt>=4.3.0,<5.0.0",
  # Database
  "sqlalchemy>=2.0.43,<3.0.0",
  "psycopg[binary]>=3.1.0,<4.0.0",
  "alembic>=1.16.4,<2.0.0",
  # Data processing - Pydantic v2 for compatibility with FastAPI
  "pandas>=2.3.1,<3.0.0",
  "numpy>=1.26.0,<2.0.0", # Major update available, capped at v1 for now until codebase is adapted for v2.
  "pydantic>=2.11.7,<3.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "python-dotenv>=1.1.1,<2.0.0",
  # Reporting
  "weasyprint>=66.0,<67.0", # Capped at minor version due to nonstandard versioning.
  "jinja2>=3.1.6,<4.0.0",
  "pdfkit>=1.0.0,<2.0.0",
  "graphviz>=0.21,<1.0.0",
  "pillow>=11.3.0,<12.0.0",
  "reportlab>=4.4.3,<5.0.0", # Professional PDF generation lane
  # HTTP and async utilities
  "requests>=2.32.4,<3.0.0",
  "httpx>=0.28.1,<1.0.0",
  "aiofiles>=24.1.0,<25.0.0",
  "aiohttp>=3.12.15,<4.0.0",
  # Bioinformatics
  "biopython>=1.85,<2.0.0",
  "pysam>=0.22.0,<0.23.0",
  # Additional utilities
  "starlette",
  "sse-starlette",
  "werkzeug",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "isort",
  "flake8",
  "mypy",
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"
