## THIS PyProject.TOML IS FOR DEVELOPMENT ONLY
## PEP 621 project metadata for uv
[project]
name = "zaropgx"
version = "0.2.5"
description = "[DEVELOPMENT] ZaroPGx Pharmacogenomic Analysis Platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
  { name = "Iliya Yaroshevskiy", email = "zaromics@gmail.com" }
]

dependencies = [
  # Web and ASGI
  "fastapi[standard]>=0.116.0,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  # Auth and security
  "python-jose>=3.5.0,<4.0.0",
  "passlib>=1.7.4,<2.0.0",
  "bcrypt>=4.3.0,<5.0.0",
  # Database
  "sqlalchemy>=2.0.43,<3.0.0",
  "psycopg[binary]>=3.1.0,<4.0.0",
  "alembic>=1.16.4,<2.0.0",
  # Data processing - Pydantic v2 for compatibility with FastAPI
  "pandas>=2.3.1,<3.0.0",
  "numpy>=1.26.0,<2.0.0", # Major update available, capped at v1 for now until codebase is adapted for v2.
  "pydantic>=2.11.7,<3.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "python-dotenv>=1.1.1,<2.0.0",
  # Reporting
  "weasyprint>=66.0,<67.0", # Capped at minor version due to nonstandard versioning.
  "jinja2>=3.1.6,<4.0.0",
  "pdfkit>=1.0.0,<2.0.0",
  "graphviz>=0.21,<1.0.0",
  "pillow>=11.3.0,<12.0.0",
  "reportlab>=4.4.3,<5.0.0", # Professional PDF generation lane
  # HTTP and async utilities
  "requests>=2.32.4,<3.0.0",
  "httpx>=0.28.1,<1.0.0",
  "aiofiles>=24.1.0,<25.0.0",
  "aiohttp>=3.12.15,<4.0.0",
  # Bioinformatics
  "biopython>=1.85,<2.0.0",
  "pysam>=0.22.0,<0.23.0",
  # Additional utilities
  "starlette>=0.47.2,<1.0.0",
  "sse-starlette>=3.0.2,<4.0.0",
  "werkzeug>=3.1.3,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2,<9.0.0",
  "black>=25.9.0,<26.0.0",
  "isort>=6.1.0,<7.0.0",
  "flake8>=7.3.0,<8.0.0",
  "mypy>=1.18.2,<2.0.0",
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

# Flat-layout auto-discovery scans the repo root and, with implicit namespaces
# (PEP 420), treats many sibling dirs (app, db, docker, config, …) as separate
# top-level packages. Setuptools then aborts with "Multiple top-level packages
# discovered in a flat-layout" — see:
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#flat-layout
# Fix: custom discovery limited to the real distribution root package `app`.
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
namespaces = true
